[tool.poetry]
name = "script_backup_python"
version = "0.1.0"
description = ""
authors = ["Matt <******@******.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
progress = "^1.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
